# python-orm-setup

./: README.md  pyproject.toml
src/pos/: __main__.py  create_db.py  db.py  main.py
src/pos/crud/: movies.py
src/pos/models/: movies.py
