[project]
name = "pos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mitchell_kimbell",email = "mfkimbell@gmail.com"},
]
dependencies = ["sqlalchemy>=2.0.36", "psycopg2>=2.9.10"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
