[project]
name = "python-orm-setup"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mitchell Kimbell", email = "mfkimbell@gmail.com"},
]
dependencies = ["sqlalchemy>=2.0.36", "psycopg2-binary>=2.9.10"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
